@@ -337,15 +337,6 @@
                 #3  0x00007ffff7ab03de in signaler_on_updated_entry (entry=0x3260160, self=0x1c6f5a0) at ../../../src/core/ofa-reconcil-store.c:1415
                 #4  0x00007ffff7ab03de in signaler_on_updated_base (signaler=<optimized out>, object=<optimized out>, prev_id=<optimized out>, self=0x1c6f5a0) at ../../../src/core/ofa-reconcil-store.c:1400
 
-1496 2017-10-19 BUG: when generating a VAT operation
-                (openbook:1902): OFA-DEBUG: ofa_accentry_store_signaler_on_new_base: signaler=0x95b0e0, object=0x19e6ba0 (ofoEntry), self=0x2aa12d0
-                Thread 1 "openbook" received signal SIGSEGV, Segmentation fault.
-                0x00007ffff4d04a36 in g_type_check_instance_cast () from /lib64/libgobject-2.0.so.0
-                (gdb) bt
-                #0  0x00007ffff4d04a36 in g_type_check_instance_cast () at /lib64/libgobject-2.0.so.0
-                #1  0x000000000048246c in store_on_need_refilter (store=<optimized out>, self=<optimized out>) at ../../../src/ui/ofa-unsettled-page.c:561
-     2017-10-20 ofaUnsettledPage: tview is a TVBIN: check added
-
 1500 2017-10-22 DBMS AUDIT: add current user
 
 1502 2017-11- 2 DBMS RecurrentModel: move editable amounts to a child table
@@ -1308,6 +1299,16 @@
 
 1494 2017-10-19 reconciliation: balance is not checked
      2017-10-20 user preferences were lost - fixed
+
+1496 2017-10-19 BUG: when generating a VAT operation
+                (openbook:1902): OFA-DEBUG: ofa_accentry_store_signaler_on_new_base: signaler=0x95b0e0, object=0x19e6ba0 (ofoEntry), self=0x2aa12d0
+                Thread 1 "openbook" received signal SIGSEGV, Segmentation fault.
+                0x00007ffff4d04a36 in g_type_check_instance_cast () from /lib64/libgobject-2.0.so.0
+                (gdb) bt
+                #0  0x00007ffff4d04a36 in g_type_check_instance_cast () at /lib64/libgobject-2.0.so.0
+                #1  0x000000000048246c in store_on_need_refilter (store=<optimized out>, self=<optimized out>) at ../../../src/ui/ofa-unsettled-page.c:561
+     2017-10-20 ofaUnsettledPage: tview is a TVBIN: check added
+     2017-11-17 fixed
 
 1497 2017-10-20 remove debug line 'find_account_by_number' above
      2017-10-20 done
